[project]
name = "qbank"
version = "0.1.0"
description = "A spaced repetition question bank system with ELO-based difficulty rating"
readme = "README.md"
license = "MIT"

keywords = ["spaced-repetition", "question bank", "flashcards", "study", "learning", "anki", "elo-rating", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = []



[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0"
]

[project.scripts]
qbank-cli = "cli:main"
qbank-demo = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T10", "EM", "G", "PIE", "T20", "Q", "RET", "SIM", "TCH", "ARG", "PTH", "PD", "PGH", "PLC", "PLE", "PLR", "PLW", "RUF"]
ignore = ["S101", "PLR0913", "PLR0912", "PLR0915"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "PLR2004"]
